# tap-twitterapi

./: .gitignore  README.md  config.sample.json  meltano.yml  mypy.ini  pyproject.toml  tap_twitter_api.sh  tap_twitterapi.sh  tox.ini
tap_twitter_api/: __init__.py  streams.py  tap.py
tap_twitterapi/: __init__.py  auth.py  streams.py  tap.py
tests/: __init__.py  test_core.py
tools/: replace_string.py
