[tool.poetry]
name = "tap-twitterapi"
version = "0.1.1"
description = "Singer tap for the Twitter API, built with the Meltano SDK for Singer Taps."
authors = ["Ighodaro Emwinghare <kelvinemwinghare43@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/kelvine95/tap-twitterapi"
repository = "https://github.com/kelvine95/tap-twitterapi"
keywords = ["singer", "tap", "twitter", "api", "meltano"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
singer-sdk = "^0.24.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
types-requests = "^2.28.11.7"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-twitterapi = "tap_twitterapi.tap:TapTwitter.cli"
